# shares-robot

./: CMakeLists.txt  ChangeLog  LICENSE  README  TODO
Modules/: FindPostgreSQL.cmake  MacroApp.cmake
src/: CMakeLists.txt  config.h.in
src/shares-robot/: .Robot.cpp.swp  CMakeLists.txt  Database.cpp  Database.h  Robot.cpp  Robot.h  Stock.cpp  Stock.h  main.cpp
